added get to know us and made some changes

--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
 <! doctype html >
+<html>
+	<head>
+	<link rel="stylesheet" href="assets/personal_project.css" /> 
+	
+	<title>Welcome</title>
+	</head>
+	<body>
+	<div class="nav" id="textfont1">
+		<table>
+			<tr>
+				<a href="index.html" >home</a> 
+			</tr>
+			<tr>
+				<a href="get_to_know_us.html" >NKU at ACM</a>
+			</tr>
+			<tr>
+				<p>merch</p>
+			</tr>
+			<tr>
+				<p>get involved</p>
+			</tr>
+			<tr>
+				<p>contact us!</p>
+			</tr>
+		</table>
+	</div>
+	<div id="textfont1">
+	<h1 class="headingcolor1 group" id="flex1">About  ACM club</h1>
+		<p>The Association for Computing Machinery provides resources and wishes to advance computing as a science and a career. There are chapters of ACM in many colleges.</p>
+			<blockquote>ACM is a global scientific and educational organization dedicated to advancing the art, science, engineering, and application of computing, serving both professional and public interests by fostering the open exchange of information and by promoting the highest professional and ethical standards.
+			<br />-acm.org </blockquote>
+	<div>
+		<h2 class="headingcolor1 group">ACM has some Core values that every collegiate and professional chapter abides by!</h2>
+		<ul>
+		  <li>Technical excellence</li>
+		  <li>Education and techincal advancement</li>
+		  <li>Ethical computing and technology for positive impact</li>
+		  <li>Diversity, Equity, and Inclusion</li>
+		</ul> 
+	</div>
+	<div class="group">
+		<div>
+			<h3 class="flex1 headingcolor1 ">Here's the NKU ACM club!</h3>
+		</div>
+		
+		<div>
+			<img style="width:300px" src="images/acm_logo.jpg" id="flex1" />
+			<img style="width:300px" src="images/group_picture.jpg" id="flex1" />
+		</div>
+	</div>
+	<div class="group ">
+		<h2 class="headingcolor1" id="flex1">Join us!</h2>
+		<a href = "https://nku.presence.io/organization/acm-at-nku">Join ACM at NKU</a>
+	</div>
+	</div>
+	</body>
+	
+
+</html>
