added all files

--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,29 @@
 <! doctype html >
 <html>
 	<head>
-	
+	<link rel="stylesheet" href="assets/personal_project.css" /> 
 	
 	</head>
 	<body>
-	
+	<div class="nav" id="textfont1">
+		<table>
+			<tr>
+				<a href="index.html" id="tab" >Home</a>   
+			</tr>
+			<tr>
+				<a href="get_to_know_us.html" id="tab" >NKU at ACM</a>
+			</tr>
+			<tr>
+				<a href="merch.html" id="tab" >Merch</a>
+			</tr>
+			<tr>
+				<a href="get_involved.html" id="tab" >Get Involved</a>
+			</tr>
+			<tr>
+				<a href="contact.html" id="tab" >Contact us!</a>
+			</tr>
+		</table>
+	</div>
 	
 	</body>
 </html>
