--- a/get_involved.html
+++ b/get_involved.html
@@ -1,11 +1,44 @@
 <! doctype html >
 <html>
 	<head>
-	
-	
+	<title>Get involved</title>
+	<link rel="stylesheet" href="assets/personal_project.css" /> 
 	</head>
 	<body>
+	<div class="nav" id="textfont1">
+		<table>
+			<tr>
+				<a href="index.html" id="tab">Home</a>   
+			</tr>
+			<tr>
+				<a href="get_to_know_us.html" id="tab" >NKU at ACM</a>
+			</tr>
+			<tr>
+				<a href="merch.html"  id="tab">Merch</a>
+			</tr>
+			<tr>
+				<a href="get_involved.html" id="tab">Get Involved</a>
+			</tr>
+			<tr>
+				<a href="contact.html" id="tab">Contact us!</a>
+			</tr>
+		</table>
+	</div>
 	
-	
+	<h1 class="headingcolor1" id="textfont1" >Events</h1>
+		<p>nothing plannned at the moment</p>
+	<h1 class="headingcolor1" id="textfont1" >Sign up for the ACM club!</h1>
+	<div  class="center flex1"  >
+		<fieldset>
+		<legend id="textfont1">Name:</legend>
+			<form action="/https://nku.presence.io/organization/acm-at-nku" id="textfont1">
+			  <label for="fname">First name:</label><br>
+			  <input type="text" id="fname" name="fname" value="John"><br>
+			  <label for="lname">Last name:</label><br>
+			  <input type="text" id="lname" name="lname" value="Doe"><br><br>
+			  <input type="submit" value="Submit">
+			</form> 
+		</fieldset>
+	</div>
 	</body>
 </html>
