--- a/get_to_know_us.html
+++ b/get_to_know_us.html
@@ -9,19 +9,19 @@
 	<div class="nav" id="textfont1">
 		<table>
 			<tr>
-				<a href="index.html" >home</a>   
+				<a href="index.html" id="tab">Home</a>   
 			</tr>
 			<tr>
-				<a href="get_to_know_us.html" >NKU at ACM</a>
+				<a href="get_to_know_us.html" id="tab">NKU at ACM</a>
 			</tr>
 			<tr>
-				<p>merch</p>
+				<a href="merch.html" id="tab">Merch</a>
 			</tr>
 			<tr>
-				<p>get involved</p>
+				<a href="get_involved.html" id="tab">Get Involved</a>
 			</tr>
 			<tr>
-				<p>contact us!</p>
+				<a href="contact.html" id="tab">Contact us!</a>
 			</tr>
 		</table>
 	</div>
