--- a/merch.html
+++ b/merch.html
@@ -1,11 +1,32 @@
 <! doctype html >
 <html>
 	<head>
-	
-	
+	<title>Merch Store</title>
+	<link rel="stylesheet" href="assets/personal_project.css" /> 	
 	</head>
 	<body>
-	
-	
+	<div class="nav" id="textfont1">
+		<table>
+			<tr>
+				<a href="index.html" id="tab" >Home</a>   
+			</tr>
+			<tr>
+				<a href="get_to_know_us.html" id="tab">NKU at ACM</a>
+			</tr>
+			<tr>
+				<a href="merch.html" id="tab">Merch</a>
+			</tr>
+			<tr>
+				<a href="get_involved.html" id="tab">Get Involved</a>
+			</tr>
+			<tr>
+				<a href="contact.html" id="tab">Contact us!</a>
+			</tr>
+		</table>
+	</div>
+	<h1 class="headingcolor1" id="textfont1">Check out our merch!</h1>
+	<div>
+		<object data="https://acm-at-nku.creator-spring.com/" width="100%" height="100%"> <embed src="https://acm-at-nku.creator-spring.com/" width="600" height="800"> </embed> </object>
+	</div>
 	</body>
 </html>
