fully working website

--- a/get_to_know_us.html
+++ b/get_to_know_us.html
@@ -26,11 +26,17 @@
 		</table>
 	</div>
 	<h1 class="headingcolor1 center" id="textfont1">Meet the team!</h1>
+	<div class="row center border group"id="textfont1">
+	<a href="#nav1"> Nicholas Caporusso  </a>
+	<a href="#nav2"> Tedla Tafari</a>
+	<a href="#nav3"> Trung Cao</a>
+	<a href="#nav4"> Katrina Harp </a>
+	</div>
 	<!-- maybe learn the flip thingy for mask and no mask -->
-	<!-- relative links to each div -->
+	
 	<div id="textfont1">
-		<div class="flex-start nav" >
-			<div class="column">
+		<div class="flex-start nav"  >
+			<div class="column" id="nav1">
 				<h3 class="headingcolor1">Organization Advisor</h3>
 				<img style="width:300px" src="images/caporusso_mask.jpg" />
 				
@@ -39,7 +45,7 @@
 			</div>
 		</div>
 		<div class="flex-end border">
-			<div class="column">
+			<div class="column" id="nav2">
 			<h3 class="headingcolor1">President</h3>
 				<img style="width:300px" src="images/tedla_mask.jpg" />
 				<p>&nbsp;Tedla is our president!<br />&nbsp; He is in charge of the day to day tasks that get done within the ACM club!&nbsp; </p>
@@ -47,14 +53,14 @@
 			</div>
 		</div>
 		<div class="flex-start nav">
-			<div class="column">
+			<div class="column" id="nav3">
 			<h3 class="headingcolor1">Vice President</h3>
 				<img style="width:300px" src="images/trung_mask.jpg" />
 				<p>&nbsp;Trung is our VP! <br />&nbsp; He helps our president and can delegate tasks to team members to take some work off of the president</p>
 			</div>
 		</div>
 		<div class="flex-end border">
-			<div class="column">
+			<div class="column" id="nav4" >
 			<h3 class="headingcolor1">Treasurer</h3>	
 				<img style="width:300px" src="images/kat_mask.jpg" />
 				<p>&nbsp;Katrina is our Treasurer! <br />&nbsp; She deals with finances and makes sure the ACM club has the means nessacary for coordinating events.&nbsp; </p>
@@ -65,7 +71,26 @@
 			<p id="textfont1">ACM is the world's largest educational and scientific computing society advancing computing as a science and profession. Our goal is to foster a community of passionate students through hackathons, social events, and competitions such as ICPC. </p>
 		<h1 class="headingcolor1" id="textfont1">What we do</h1>
 			<p id="textfont1">ACM at NKU is experiencing a revitalization! We hope to meet bi-weekly throughout the spring semester. We are hosting ICPC, a coding competition, right here at NKU! We would be happy to see you at our meetings!</p>
-		<a href="https://docs.google.com/spreadsheets/d/1AjAekq9Z3YmvFICkKBO1nDLnMFW1zuvT3ZBFNg3IKMs/edit#gid=0" id="textfont1">Here are our current members</a>
-	
+		<a href="https://docs.google.com/spreadsheets/d/1AjAekq9Z3YmvFICkKBO1nDLnMFW1zuvT3ZBFNg3IKMs/edit#gid=0" id="textfont1">Here are our current members</a><br />
+		<table class="bottom">
+			<tr>
+				<td><a href="index.html" id="tab">Home</a></td> 
+				<td><a href="get_to_know_us.html" id="tab" >NKU at ACM</a></td>
+				<td><a href="merch.html"  id="tab">Merch</a></td>
+				<td><a href="get_involved.html" id="tab">Get Involved</a></td>
+				<td><a href="contact.html" id="tab">Contact us!</a></td>
+			</tr>
+			<tr>		
+				<td><a href="#nav1"> Nicholas Caporusso  </a>
+				<td><a href="#nav2"> Tedla Tafari</a></td>
+				<td><a href="#nav3"> Trung Cao</a></td>
+				<td><a href="#nav4"> Katrina Harp </a></td>
+			</tr>
+			<tr>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHUeZ8TjGqf0yLr9pAv8UrXezhWYvSBJEKmAMHeS2CVjDLnA/viewform">Game Night</a></td>
+				<td><a href="https://icpc.global/"	>ICPC</a></td>
+				<td><a href="#form1">Join</a></td>			
+			</tr>	
+		</table>
 	</body>
 </html>
