--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		<div>
 			<img style="width:300px" src="images/acm_logo.jpg" id="flex1" />
 			<img style="width:300px" src="images/group_picture.jpg" id="flex1" />
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/8TWGge8e6Ug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" id="flex1" allowfullscreen></iframe>
 		</div>
 	</div>
 	<div class="group ">
@@ -54,6 +55,26 @@
 		<a href = "https://nku.presence.io/organization/acm-at-nku">Join ACM at NKU</a>
 	</div>
 	</div>
+		<table class="bottom">
+			<tr>
+				<td><a href="index.html" id="tab">Home</a></td> 
+				<td><a href="get_to_know_us.html" id="tab" >NKU at ACM</a></td>
+				<td><a href="merch.html"  id="tab">Merch</a></td>
+				<td><a href="get_involved.html" id="tab">Get Involved</a></td>
+				<td><a href="contact.html" id="tab">Contact us!</a></td>
+			</tr>
+			<tr>		
+				<td><a href="#nav1"> Nicholas Caporusso  </a>
+				<td><a href="#nav2"> Tedla Tafari</a></td>
+				<td><a href="#nav3"> Trung Cao</a></td>
+				<td><a href="#nav4"> Katrina Harp </a></td>
+			</tr>
+			<tr>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHUeZ8TjGqf0yLr9pAv8UrXezhWYvSBJEKmAMHeS2CVjDLnA/viewform">Game Night</a></td>
+				<td><a href="https://icpc.global/"	>ICPC</a></td>
+				<td><a href="#form1">Join</a></td>			
+			</tr>	
+		</table>
 	</body>
 	
 
