--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,58 @@
 			</tr>
 		</table>
 	</div>
-	
+	<h1 class="headingcolor1" id="textfont1">Our Socials</h1>
+	<div  class="row center" id="tab">
+		<div class="group" style="align-items:center">
+			<div>
+				<a href="https://www.instagram.com/acmatnku/"
+				><img src="images/insta.jpg" width="33.33%"></a>
+			</div>
+		</div>
+		<div class="group">
+			<a href=
+			"https://twitter.com/ACMatNKU"
+			><img src="images/new_twitter_bird.jpg" width="33.33%"></a>
+			<br /> 
+		</div>
+		<div class="group">
+			<a href=
+			"https://discord.gg/bFmq5Qw54D"
+			><img src="images/discord_logo.jpg" width="33.33%"></a>	
+		</div>
+	</div>
+	<h1 class="headingcolor1" id="textfont1">Contact our social media manager</h1>
+	<div class="row center" id="textfont1">
+		<div class="flex-start group flex-row center" >
+			<img src="images/andrew.jpg" width="25%">
+		
+		<div>
+			<h4 class="headingcolor1" id="textfont1">Email:</h4>
+			<p>oneala5@nku.edu</p><br /><br />
+			<h4 class="headingcolor1" id="textfont1">Instagram:</h4>
+			<p>andrew._.oneal</p>
+		</div>
+		</div>
+	</div><br /><br />
+		<table class="bottom">
+			<tr>
+				<td><a href="index.html" id="tab">Home</a></td> 
+				<td><a href="get_to_know_us.html" id="tab" >NKU at ACM</a></td>
+				<td><a href="merch.html"  id="tab">Merch</a></td>
+				<td><a href="get_involved.html" id="tab">Get Involved</a></td>
+				<td><a href="contact.html" id="tab">Contact us!</a></td>
+			</tr>
+			<tr>		
+				<td><a href="#nav1"> Nicholas Caporusso  </a>
+				<td><a href="#nav2"> Tedla Tafari</a></td>
+				<td><a href="#nav3"> Trung Cao</a></td>
+				<td><a href="#nav4"> Katrina Harp </a></td>
+			</tr>
+			<tr>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHUeZ8TjGqf0yLr9pAv8UrXezhWYvSBJEKmAMHeS2CVjDLnA/viewform">Game Night</a></td>
+				<td><a href="https://icpc.global/"	>ICPC</a></td>
+				<td><a href="#form1">Join</a></td>			
+			</tr>	
+		</table>
 	</body>
 </html>
