--- a/contact.html
+++ b/contact.html
@@ -5,43 +5,44 @@
 	
 	</head>
 	<body>
-	<div class="nav" id="textfont1">
-		<table>
-			<tr>
-				<a href="index.html" id="tab" >Home</a>   
-			</tr>
-			<tr>
-				<a href="get_to_know_us.html" id="tab" >NKU at ACM</a>
-			</tr>
-			<tr>
-				<a href="merch.html" id="tab" >Merch</a>
-			</tr>
-			<tr>
-				<a href="get_involved.html" id="tab" >Get Involved</a>
-			</tr>
-			<tr>
-				<a href="contact.html" id="tab" >Contact us!</a>
-			</tr>
-		</table>
+	<div class="nav" id="textfont1" style="justify-content:space-evenly">
+		<div style="flex-grow:1;text-align:center">
+			<a href="index.html" id="tab">Home</a>   
+		</div>
+		<div style="flex-grow:1;text-align:center">
+			<a href="get_to_know_us.html" id="tab">NKU at ACM</a>
+		</div>
+		<div style="flex-grow:1;text-align:center">
+			<a href="merch.html" id="tab">Merch</a>
+		</div>
+		<div style="flex-grow:1;text-align:center">
+			<a href="get_involved.html" id="tab">Get Involved</a>
+		</div>
+		<div style="flex-grow:1;text-align:center">
+			<a href="contact.html" id="tab">Contact us!</a>
+		</div>
+	</div>
 	</div>
 	<h1 class="headingcolor1" id="textfont1">Our Socials</h1>
 	<div  class="row center" id="tab">
 		<div class="group" style="align-items:center">
 			<div>
 				<a href="https://www.instagram.com/acmatnku/"
-				><img src="images/insta.jpg" width="33.33%"></a>
+				><img src="images/insta.jpg" style="height:150px;max-width:300px"></a>
+			</div>
+		</div>
+		<div class="group">
+			<div>
+				<a href=
+				"https://twitter.com/ACMatNKU"
+				><img src="images/new_twitter_bird.jpg" style="height:150px;max-width:300px"></a>
+				<br /> 
 			</div>
 		</div>
 		<div class="group">
 			<a href=
-			"https://twitter.com/ACMatNKU"
-			><img src="images/new_twitter_bird.jpg" width="33.33%"></a>
-			<br /> 
-		</div>
-		<div class="group">
-			<a href=
 			"https://discord.gg/bFmq5Qw54D"
-			><img src="images/discord_logo.jpg" width="33.33%"></a>	
+			><img src="images/discord_logo.jpg" style="height:150px;max-width:300px"></a>	
 		</div>
 	</div>
 	<h1 class="headingcolor1" id="textfont1">Contact our social media manager</h1>
@@ -49,7 +50,7 @@
 		<div class="flex-start group flex-row center" >
 			<img src="images/andrew.jpg" width="25%">
 		
-		<div>
+		<div style="padding-left:.50%">
 			<h4 class="headingcolor1" id="textfont1">Email:</h4>
 			<p>oneala5@nku.edu</p><br /><br />
 			<h4 class="headingcolor1" id="textfont1">Instagram:</h4>
@@ -57,25 +58,26 @@
 		</div>
 		</div>
 	</div><br /><br />
-		<table class="bottom">
-			<tr>
-				<td><a href="index.html" id="tab">Home</a></td> 
-				<td><a href="get_to_know_us.html" id="tab" >NKU at ACM</a></td>
-				<td><a href="merch.html"  id="tab">Merch</a></td>
-				<td><a href="get_involved.html" id="tab">Get Involved</a></td>
-				<td><a href="contact.html" id="tab">Contact us!</a></td>
-			</tr>
-			<tr>		
-				<td><a href="#nav1"> Nicholas Caporusso  </a>
-				<td><a href="#nav2"> Tedla Tafari</a></td>
-				<td><a href="#nav3"> Trung Cao</a></td>
-				<td><a href="#nav4"> Katrina Harp </a></td>
-			</tr>
-			<tr>
-				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHUeZ8TjGqf0yLr9pAv8UrXezhWYvSBJEKmAMHeS2CVjDLnA/viewform">Game Night</a></td>
-				<td><a href="https://icpc.global/"	>ICPC</a></td>
-				<td><a href="#form1">Join</a></td>			
-			</tr>	
-		</table>
+		<div class="nav" id="textfont1">
+		
+			<div>
+				<a href="index.html" style="flex-grow:1;text-align:center" id="tab">Home</a><br />
+				<a href="get_to_know_us.html" style="flex-grow:1;text-align:center" id="tab" >NKU at ACM</a><br />
+				<a href="merch.html"  style="flex-grow:1;text-align:center" id="tab">Merch</a><br />
+				<a href="get_involved.html" style="flex-grow:1;text-align:center" id="tab">Get Involved</a><br />
+				<a href="contact.html" style="flex-grow:1;text-align:center" id="tab">Contact us!</a><br />
+			</div>
+			<div>		
+				<a href="#nav1" style="flex-grow:1;text-align:center"> Nicholas Caporusso  </a><br />
+				<a href="#nav2" style="flex-grow:1;text-align:center"> Tedla Tafari</a><br />
+				<a href="#nav3" style="flex-grow:1;text-align:center"> Trung Cao</a><br />
+				<a href="#nav4" style="flex-grow:1;text-align:center"> Katrina Harp </a><br />
+			</div>
+			<div>
+				<a href="https://docs.google.com/forms/d/e/1FAIpQLSfHUeZ8TjGqf0yLr9pAv8UrXezhWYvSBJEKmAMHeS2CVjDLnA/viewform" style="flex-grow:1;text-align:center">Game Night</a><br />
+				<a href="https://icpc.global/"	style="flex-grow:1;text-align:center">ICPC</a><br />
+				<a href="#form1">Join</a><br />			
+			</div>	
+		</div>
 	</body>
 </html>
