--- a/get_involved.html
+++ b/get_involved.html
@@ -5,53 +5,51 @@
 	<link rel="stylesheet" href="assets/personal_project.css" /> 
 	</head>
 	<body>
-	<div class="nav" id="textfont1">
-		<table>
-			<tr>
-				<a href="index.html" id="tab">Home</a>   
-			</tr>
-			<tr>
-				<a href="get_to_know_us.html" id="tab" >NKU at ACM</a>
-			</tr>
-			<tr>
-				<a href="merch.html"  id="tab">Merch</a>
-			</tr>
-			<tr>
-				<a href="get_involved.html" id="tab">Get Involved</a>
-			</tr>
-			<tr>
-				<a href="contact.html" id="tab">Contact us!</a>
-			</tr>
-		</table>
+	<div class="nav" id="textfont1" style="justify-content:space-evenly">
+		<div style="flex-grow:1;text-align:center">
+			<a href="index.html" id="tab">Home</a>   
+		</div>
+		<div style="flex-grow:1;text-align:center">
+			<a href="get_to_know_us.html" id="tab">NKU at ACM</a>
+		</div>
+		<div style="flex-grow:1;text-align:center">
+			<a href="merch.html" id="tab">Merch</a>
+		</div>
+		<div style="flex-grow:1;text-align:center">
+			<a href="get_involved.html" id="tab">Get Involved</a>
+		</div>
+		<div style="flex-grow:1;text-align:center">
+			<a href="contact.html" id="tab">Contact us!</a>
+		</div>
 	</div>
 	
 	<h1 class="headingcolor1" id="textfont1" >Events</h1>
-	<div  class="row center" id="tab">
+	<div  class="row center" id="textfont1" >
 		<div class="group">
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSfHUeZ8TjGqf0yLr9pAv8UrXezhWYvSBJEKmAMHeS2CVjDLnA/viewform"
-			><img src="images/game_night.jpg" width="33.33%"></a>
+			><img src="images/game_night.jpg" style="height:150px;max-width:300px"></a>
 			<br /> <p>We want to host a "get to know us" game night. feel free to fill out this form and tell us what games you would like to see</p>
 		</div>
 		<div class="group">
 			<a href=
 			"https://icpc.global/"
-			><img src="images/icpc.JPG" width="33.33%"></a>
+			><img src="images/icpc.JPG" style="height:150px;max-width:300px"></a>
 			<br /> <p> We are Hosting icpc, or the International Collegiate Programing Contest at NKU! Find out how you can get involved!
 		</div>
 		<div class="group">
 			<a href=
 			"#form1"
-			><img src="images/hi_my_name_is.jpg" width="33.33%"></a>
+			><img src="images/hi_my_name_is.jpg" style="height:150px;max-width:300px"></a>
 			<br /> <p>Introduce yourself and sign up for the ACM club!</p>
 		</div>
 	</div>
 	<h1 class="headingcolor1" id="textfont1" >Sign up for the ACM club!</h1>
 	<div class="column" id="form1"> 
-		<fieldset class="formflex" >
+		<fieldset style="width:70%" >
 
 			<h1 class="headingcolor1" id="textfont1">Your information</h1>
 			<div id="textfont1">
-				<form method="GET" class="group" >
+				<form method="GET" class="group" style="width:60%" >
 					<label>First name:</label><br>
 					<input type="text"><br /><br />
 			
@@ -93,26 +91,27 @@
 			</fieldset>
 		</div>
 	</div>
-	<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-	<table class="bottom">
-			<tr>
-				<td><a href="index.html" id="tab">Home</a></td> 
-				<td><a href="get_to_know_us.html" id="tab" >NKU at ACM</a></td>
-				<td><a href="merch.html"  id="tab">Merch</a></td>
-				<td><a href="get_involved.html" id="tab">Get Involved</a></td>
-				<td><a href="contact.html" id="tab">Contact us!</a></td>
-			</tr>
-			<tr>		
-				<td><a href="#nav1"> Nicholas Caporusso  </a>
-				<td><a href="#nav2"> Tedla Tafari</a></td>
-				<td><a href="#nav3"> Trung Cao</a></td>
-				<td><a href="#nav4"> Katrina Harp </a></td>
-			</tr>
-			<tr>
-				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHUeZ8TjGqf0yLr9pAv8UrXezhWYvSBJEKmAMHeS2CVjDLnA/viewform">Game Night</a></td>
-				<td><a href="https://icpc.global/"	>ICPC</a></td>
-				<td><a href="#form1">Join</a></td>			
-			</tr>	
-	</table>
+	
+	<div class="nav" id="textfont1">
+		
+			<div>
+				<a href="index.html" style="flex-grow:1;text-align:center" id="tab">Home</a><br />
+				<a href="get_to_know_us.html" style="flex-grow:1;text-align:center" id="tab" >NKU at ACM</a><br />
+				<a href="merch.html"  style="flex-grow:1;text-align:center" id="tab">Merch</a><br />
+				<a href="get_involved.html" style="flex-grow:1;text-align:center" id="tab">Get Involved</a><br />
+				<a href="contact.html" style="flex-grow:1;text-align:center" id="tab">Contact us!</a><br />
+			</div>
+			<div>		
+				<a href="#nav1" style="flex-grow:1;text-align:center"> Nicholas Caporusso  </a><br />
+				<a href="#nav2" style="flex-grow:1;text-align:center"> Tedla Tafari</a><br />
+				<a href="#nav3" style="flex-grow:1;text-align:center"> Trung Cao</a><br />
+				<a href="#nav4" style="flex-grow:1;text-align:center"> Katrina Harp </a><br />
+			</div>
+			<div>
+				<a href="https://docs.google.com/forms/d/e/1FAIpQLSfHUeZ8TjGqf0yLr9pAv8UrXezhWYvSBJEKmAMHeS2CVjDLnA/viewform" style="flex-grow:1;text-align:center">Game Night</a><br />
+				<a href="https://icpc.global/"	style="flex-grow:1;text-align:center">ICPC</a><br />
+				<a href="#form1">Join</a><br />			
+			</div>	
+		</div>
 	</body>
 </html>
