--- a/index.html
+++ b/index.html
@@ -2,28 +2,27 @@
 <html>
 	<head>
 	<link rel="stylesheet" href="assets/personal_project.css" /> 
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Welcome</title>
 	</head>
 	<body>
-	<div class="nav" id="textfont1">
-		<table>
-			<tr>
-				<a href="index.html" id="tab">Home</a> 
-			</tr>
-			<tr>
-				<a href="get_to_know_us.html" id="tab">NKU at ACM</a>
-			</tr>
-			<tr>
-				<a href="merch.html" id="tab">Merch</a>
-			</tr>
-			<tr>
-				<a href="get_involved.html" id="tab">Get Involved</a>
-			</tr>
-			<tr>
-				<a href="contact.html" id="tab">Contact us!</a>
-			</tr>
-		</table>
+	
+	<div class="nav" id="textfont1" style="justify-content:space-evenly">
+		<div style="flex-grow:1;text-align:center">
+			<a href="index.html" id="tab">Home</a>   
+		</div>
+		<div style="flex-grow:1;text-align:center">
+			<a href="get_to_know_us.html" id="tab">NKU at ACM</a>
+		</div>
+		<div style="flex-grow:1;text-align:center">
+			<a href="merch.html" id="tab">Merch</a>
+		</div>
+		<div style="flex-grow:1;text-align:center">
+			<a href="get_involved.html" id="tab">Get Involved</a>
+		</div>
+		<div style="flex-grow:1;text-align:center">
+			<a href="contact.html" id="tab">Contact us!</a>
+		</div>
 	</div>
 	<div id="textfont1">
 	<h1 class="headingcolor1 group" id="flex1">About  ACM club</h1>
@@ -39,10 +38,9 @@
 		  <li>Diversity, Equity, and Inclusion</li>
 		</ul> 
 	</div>
+		<h3 class="headingcolor1 group ">Here's the NKU ACM club!</h3>
 	<div class="group">
-		<div>
-			<h3 class="flex1 headingcolor1 ">Here's the NKU ACM club!</h3>
-		</div>
+		
 		
 		<div>
 			<img style="width:300px" src="images/acm_logo.jpg" id="flex1" />
@@ -50,31 +48,35 @@
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/8TWGge8e6Ug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" id="flex1" allowfullscreen></iframe>
 		</div>
 	</div>
-	<div class="group ">
-		<h2 class="headingcolor1" id="flex1">Join us!</h2>
-		<a href = "https://nku.presence.io/organization/acm-at-nku">Join ACM at NKU</a>
+	<h2 class="headingcolor1 group" id="flex1">Join us!</h2>
+	<div class="group nav">
+		
+		<a href = "https://nku.presence.io/organization/acm-at-nku" class="nav">Join ACM at NKU</a>
 	</div>
 	</div>
-		<table class="bottom">
-			<tr>
-				<td><a href="index.html" id="tab">Home</a></td> 
-				<td><a href="get_to_know_us.html" id="tab" >NKU at ACM</a></td>
-				<td><a href="merch.html"  id="tab">Merch</a></td>
-				<td><a href="get_involved.html" id="tab">Get Involved</a></td>
-				<td><a href="contact.html" id="tab">Contact us!</a></td>
-			</tr>
-			<tr>		
-				<td><a href="#nav1"> Nicholas Caporusso  </a>
-				<td><a href="#nav2"> Tedla Tafari</a></td>
-				<td><a href="#nav3"> Trung Cao</a></td>
-				<td><a href="#nav4"> Katrina Harp </a></td>
-			</tr>
-			<tr>
-				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHUeZ8TjGqf0yLr9pAv8UrXezhWYvSBJEKmAMHeS2CVjDLnA/viewform">Game Night</a></td>
-				<td><a href="https://icpc.global/"	>ICPC</a></td>
-				<td><a href="#form1">Join</a></td>			
-			</tr>	
-		</table>
+	<br /><br />
+		<div class="nav" id="textfont1">
+		
+			<div>
+				<a href="index.html" style="flex-grow:1;text-align:center" id="tab">Home</a><br />
+				<a href="get_to_know_us.html" style="flex-grow:1;text-align:center" id="tab" >NKU at ACM</a><br />
+				<a href="merch.html"  style="flex-grow:1;text-align:center" id="tab">Merch</a><br />
+				<a href="get_involved.html" style="flex-grow:1;text-align:center" id="tab">Get Involved</a><br />
+				<a href="contact.html" style="flex-grow:1;text-align:center" id="tab">Contact us!</a><br />
+			</div>
+			<div>		
+				<a href="#nav1" style="flex-grow:1;text-align:center"> Nicholas Caporusso  </a><br />
+				<a href="#nav2" style="flex-grow:1;text-align:center"> Tedla Tafari</a><br />
+				<a href="#nav3" style="flex-grow:1;text-align:center"> Trung Cao</a><br />
+				<a href="#nav4" style="flex-grow:1;text-align:center"> Katrina Harp </a><br />
+			</div>
+			<div>
+				<a href="https://docs.google.com/forms/d/e/1FAIpQLSfHUeZ8TjGqf0yLr9pAv8UrXezhWYvSBJEKmAMHeS2CVjDLnA/viewform" style="flex-grow:1;text-align:center">Game Night</a><br />
+				<a href="https://icpc.global/"	style="flex-grow:1;text-align:center">ICPC</a><br />
+				<a href="#form1">Join</a><br />			
+			</div>	
+		</div>
+	</div>
 	</body>
 	
 
