fixed get involved

--- a/get_involved.html
+++ b/get_involved.html
@@ -33,7 +33,7 @@
 		<div class="group">
 			<a href=
 			"https://icpc.global/"
-			><img src="images/icpc.JPG" style="height:150px;max-width:300px"></a>
+			><img src="images/icpc.jpg" style="height:150px;max-width:300px"></a>
 			<br /> <p> We are Hosting icpc, or the International Collegiate Programing Contest at NKU! Find out how you can get involved!
 		</div>
 		<div class="group">
